--- a/fashion-store/index.html
+++ b/fashion-store/index.html
@@ -175,7 +175,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Fashionista Store. All Rights Reserved. | Designed for College Project</p>
+            <p>&copy; 2025 Fashionista Store | ABES Engineering College</p>
         </div>
     </footer>
 </body>
