--- a/fashion-store/index.html
+++ b/fashion-store/index.html
@@ -178,5 +178,7 @@
             <p>&copy; 2025 Fashionista Store | ABES Engineering College</p>
         </div>
     </footer>
+    
+    <script src="js/auth.js"></script>
 </body>
 </html>
